--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -46,3 +46,24 @@ body{
 .list-items{
   justify-content: space-between;;
 }
+.rename-board-form{
+  position: absolute;
+  top: 0;
+  left: 0px;
+  font-size: 18px;
+  background-color: white;
+  border: 1px solid #d6dadc;
+  color: #838c91;
+  width: 320px;
+  height: 300px;
+}
+.create-list-modal{
+  position: relative;
+  top: -50px;
+  font-size: 18px;
+  background-color: white;
+  border: 1px solid #d6dadc;
+  color: #838c91;
+  width: 320px;
+  height: 300px;
+}
